Write some Pseudocode for explanation. AlsoSome chapters edited

--- a/Thesis/chapter1.tex
+++ b/Thesis/chapter1.tex
@@ -1,10 +1,11 @@
-
 \chapter{مقدمه}
 
 \section{مقدمه}
-با پیشرفت روزافزون دانش بشری در دهه اخیر و تلفیق هرچه بیشتر شاخه های علمی با یکدیگر و همچنین همگام شدن و بهره‌مندی از فناوری های موجود شاهد ساخته شدن محصولات جدیدی هستیم که ربات‌ها یکی از معروف و محبوب ترین این محصولات می‌باشند.\\
+با پیشرفت روزافزون دانش بشری در دهه اخیر و تلفیق هرچه بیشتر شاخه های علمی با یکدیگر و همچنین همگام شدن و بهره‌مندی از فناوری های موجود شاهد ساخته شدن محصولات جدیدی هستیم که ربات‌ها یکی از معروف و محبوب ترین این محصولات می‌باشند.
+
 %در دهه‌های اخیر، پیشرفت‌های چشمگیری در زمینه‌ی رباتیک و هوش مصنوعی به وجود آمده است که منجر به ایجاد روش‌ها و تکنیک‌های نوین برای طراحی و کنترل ربات‌ها گردیده است.%
-در این رساله، به اختصار مراحل طراحی و پیاده‌سازی ربات چهارپای عنکبوتی را که ساخته شده است توضیح داده و سپس به تفصیل درباره انتخاب و کالیبره‌سازی دوربین، نحوه ارتباطات بین قطعات الکترونیکی و مکانیکی،الگوریتم تشخیص موانع و نحوه‌ی اجرای و ارزیابی آزمایش‌ها خواهیم پرداخت. همچنین، نتایج و تحلیل‌های حاصل از آزمایش‌ها به منظور ارزیابی کارایی و کاربردی بودن این روش در محیط‌های واقعی را ارائه خواهیم داد.\\
+در این پایان‌نامه، به اختصار به طراحی و پیاده‌سازی ربات چهارپای عنکبوتی را که ساخته شده است اشاره شده و سپس به تفصیل درباره انتخاب و کالیبره‌سازی دوربین، نحوه ارتباطات بین قطعات الکترونیکی و مکانیکی،الگوریتم تشخیص موانع و نحوه‌ی اجرای و ارزیابی آزمایش‌ها خواهیم پرداخت. همچنین، نتایج و تحلیل‌های حاصل از آزمایش‌ها به منظور ارزیابی کارایی و کاربردی بودن این روش در محیط‌های واقعی را ارائه خواهیم داد.
+
 در انتها نیز به بررسی چالش های پیاده سازی پرداخته و پیشنهاداتی برای کارهای آینده خواهیم پرداخت.
 
 
@@ -132,98 +133,35 @@
 در این پایان‌نامه به بررسی اثرات هوش مصنوعی بر رباتیک در یک نمونه خاص از ربات‌ها (ربات چهارپا) و همچنین کاربردها و چالش‌های متنوعی که این ترکیب مهارت‌ها ایجاد می‌کنند، پرداخته خواهد شد. این نمونه خاص‌ از ربات‌ها مثال خوبی از تعامل موثر هوش مصنوعی و روباتیک در مختلف زمینه‌ها می‌پردازد.
 
 \section{مروری بر الگوریتم‌های مسیریابی}\label{مروری بر الگوریتم‌های مسیریابی}
-یکی از چالش‌های مهم در علم رباتیک مربوط به مسیریابی است که هدف آن برنامه‌ریزی مسیر با حرکت ربات از موقعیت شروع به موقعیت هدف و درعین‌حال اجتناب از برخورد با موانع ایستا
-\noindent\unskip\LTRfootnote{Static}
-و پویا
-\noindent\unskip\LTRfootnote{Dynamic}
-در محیط است. مسیریابی یک مسئله چالش‌برانگیز در  تصمیم‌گیری و کنترل است و به دو صورت انجام می‌شود: اول، طراحی مسیر سراسری که اطلاعات محیط به طور کامل برای ربات در دسترس بوده و ربات قادر به رسیدن موقعیت هدف است. دوم، طراحی مسیر محلی تنها با استفاده از داده‌های حس شده توسط ربات به این معنی که اطلاعات محیط ناشناس یا تا حدی ناشناس باشد.
-بسیاری از رویکردهای مسیریابی ارائه شده است که می‌توان آنها را به دودسته رویکردهای مرسوم
-\noindent\unskip\LTRfootnote{Conventional}
-و ابتکاری
-\noindent\unskip\LTRfootnote{Heuristic}
-تقسیم کرد. روش‌های رایج مانند نقشه راه
-\noindent\unskip\LTRfootnote{Road Map}،
-میدان پتانسیل مصنوعی
-\noindent\unskip\LTRfootnote{Artificial Potential Field}
-و تجزیه سلولی
-\noindent\unskip\LTRfootnote{Cell Decomposition}
-نمونه‌هایی از رویکردهای مرسوم هستند.
-از روش‌های ابتکاری می‌توان به نقشه راه احتمالی
-\noindent\unskip\LTRfootnote{Probabilistic Road map}،
-بهینه‌سازی کلونی مورچه‌ها
-\noindent\unskip\LTRfootnote{Ant Colony Optimization}
-و بهینه‌سازی ازدحام ذرات 
-\noindent\unskip\LTRfootnote{Particle Swarm Optimization}
-اشاره کرد.
-بااین‌حال، این الگوریتم‌ها در محیط‌های ایستا و پویا دارای مشکلاتی هستند.
-\\
-یکی از ساده‌ترین الگوریتم‌های ابتکاری، الگوریتم دایکسترا
-\noindent\unskip\LTRfootnote{Dijkstra's}
-است که مبتنی بر جستجوی گراف بوده و می‌تواند با گسسته‌سازی محیط، حداقل مسیر را بین دو گره مختلف در یک گراف پیدا کند. 
-الگوریتم دیگر
-\lr{A*}
-است که مشابه الگوریتم دایکسترا
-است؛ اما از دو تابع هزینه برای حرکت از موقعیت شروع به هدف استفاده می‌کند.
-این الگوریتم‌ها فقط برای محیط‌هایی با موانع ایستا اعمال شده و کارایی و بهینه بودن مسیر را تضمین می‌کنند، اما مسیر برنامه‌ریزی‌شده به‌شدت به گراف بستگی دارد. علاوه بر این، درنظرگرفتن محدودیت‌های دینامیکی ربات‌ها در طول فرایند برنامه‌ریزی دشوار است.
-در الگوریتم بهبودیافته
-\lr{A*}
-در 
-\cite{sipahioglu2008real}
-از روش پیشنهادی در یک محیط متغیر استفاده کرده و نتیجه نشان می‌دهد که مسیر برنامه‌ریزی‌شده هموارتر از روش‌های سنتی است. بااین‌حال، این روش محدودیت‌های دینامیکی موانع را نادیده می‌گیرد.
-\\
-در روش‌ میدان پتانسیل مصنوعی فضای کاری ربات را به‌صورت فضای پتانسیل در نظر می‌گیریم به صورتی که حداقل مطلق میدان پتانسیل در هدف قرار گرفته و موانع، بیشینه مطلق را اختیار می‌کنند. در این صورت‌مسئله طرح حرکت تبدیل به تغییرات گرادیان میدان پتانسیل در محیط کاری می‌شود.
-بسیاری از محققان روش میدان پتانسیل مصنوعی را برای کاربرد جداگانه ربات‌ها به کار برده‌اند و کاربرد و پیاده‌سازی این روش برای مجموعه‌ای از ربات‌های مشارکتی موضوعی چالش‌برانگیز است.
-\\
-الگوریتم‌های درون‌یابی منحنی مانند: منحنی‌های اسپلاین
-\noindent\unskip\LTRfootnote{Spline}،
-بزیر
-\noindent\unskip\LTRfootnote{Bezier}و
-چندجمله‌ای
-\noindent\unskip\LTRfootnote{Polynomial}و
-به‌عنوان طراحی مسیر آنلاین استفاده می‌شوند.
-این الگوریتم‌ها شبیه روش‌های مبتنی بر جستجوی گراف هستند و هزینه محاسباتی پایینی دارند؛ زیرا رفتار منحنی توسط چند پارامتر کنترلی تعریف می‌شود.
-بااین‌حال، بهینه بودن مسیر به‌دست‌آمده تضمین نمی‌شود و محدودیت‌های دینامیکی ربات در طول فرایند طراحی مسیر در نظر گرفته نمی‌شوند و علاوه بر این به یک فرایند هموارسازی 
-\noindent\unskip\LTRfootnote{Smoothing}
-برای مسیر به‌دست‌آمده نیاز دارند.
-برای تولید مسیر در مقاله 
-\cite{yang2017kinematic}
-، نویسندگان از پارامتری‌سازی اسپلاین استفاده کردند که محدودیت‌های سینماتیکی و موانع متحرک را نشان می‌دهد.
-علاوه بر این، سرعت ربات با استفاده از این پارامتر کنترل می‌شود.
-همچنین برای یافتن راه‌حل بهینه، یک الگوریتم توسط منحنی بزیر معرفی شده است که نتیجه شبیه‌سازی نشان می‌دهد روش پیشنهادی بهتر از روش سنتی عمل می‌کند.
-\\
-در مقاله 
-\cite{sudhakara2017optimal}
-، نویسندگان از ترکیبی از تکنیک‌های درخت جست‌وجوی تصادفی سریع
-\noindent\unskip\LTRfootnote{Rapidly Random Tree}
-و اسپلاین برای ایجاد یک مسیر هموار استفاده کردند.
-الگوریتم دوطرفه درخت جست‌وجوی تصادفی سریع و اسپلاین پیشنهادی بر اساس منحنی مکعب بوده و محدودیت‌های جهت‌دار را برای هر دو موقعیت شروع و هدف ارضا می‌کند.
-این الگوریتم مشابه دیگر الگوریتم‌های برنامه‌ریزی مسیر نیست و نتیجه به‌دست‌آمده در حالت زیر بهینه قرار دارد.
-\\
-برخی از الگوریتم‌های ابتکاری مانند شبیه‌سازی حرارتی
-\noindent\unskip\LTRfootnote{Simulated Annealing}
-\cite{miao2013dynamic}
-برای طراحی مسیر در محیط‌هایی با موانع استاتیک و دینامیکی استفاده می‌شوند.
-این الگوریتم، مسیر به‌دست‌آمده برای ربات را بهبود می‌بخشد. مسیر به‌دست‌آمده یک راه‌حل تقریباً بهینه است و برای پیاده‌سازی آنلاین امکان‌پذیر است، اما ابعاد ربات را نادیده گرفته و تنها از موانع با اشکال دایره‌ای اجتناب می‌کند.
-\\
-روش نقشه‌ راه احتمالی و درخت جست‌وجوی تصادفی سریع به‌عنوان روش‌های مبتنی بر نمونه‌گیری در نظر گرفته شده‌اند.
-و هر دو الگوریتم‌ برای ربات‌های هولونومیک و غیرهولونومیک کاربرد دارد.
-این روش‌ها و انواع آن‌ها به طور گسترده برای تحقیقات استفاده می‌شوند. اما استفاده از آن در کاربردهای عملی دشوار است؛ زیرا پیچیدگی محاسباتی بالایی دارند.
-در روش‌های مبتنی بر بهینه‌سازی مسیر، ایده اصلی تدوین طراحی مسیر به‌عنوان یک مسئله بهینه‌سازی است که عملکرد و محدودیت‌های موردنظر ربات در نظر گرفته شود.
-این رویکرد قادر است مسیری مناسب بین موقعیت‌های شروع و هدف پیدا کند.
-\\
-در پژوهش
-\cite{kamil2017new}
-، یک روش جدید برای پیش‌بینی و اجتناب از برخورد موانع استاتیک و دینامیک در یک محیط ناشناخته ارائه شده است. برای پیش‌بینی سرعت موانع، از فرایند تصمیم‌گیری با استفاده از اطلاعات سیستم سنسوری ربات استفاده کرده‌اند؛ بنابراین ربات قادر است مسیر مناسب را پیدا کند، و بدون برخورد به هدف برسد. نتیجه الگوریتمی کارآمد برای محیط‌های پیچیده و پویا است.
-\\
-در 
-\cite{shen2015model}
-، یک کنترل پیش‌بین مبتنی بر مدل 
-\noindent\unskip\LTRfootnote{Model Predictive Control}
-غیرخطی برای یک ربات خودران زیر آب ارائه شده است که مسئله طراحی مسیر را  با یک چارچوب بهینه‌سازی افق کاهشی همراه با اسپلاین حل می‌کند.
 
+امروزه با ساخت ربات‌های مختلف، برنامه مساله‌ریزی مسیر ربات، بسیار
+مورد توجه قرار گرفته است. به طور خلاصه، مساله برنامه‌ریزی مسیر،
+یافتن مسیری است که ربات را از نقطه شروع به نقطه هدف هدایت
+می‌کند.
+\cite{}
+در بسیاری از کاربردها برای اینکه ربات بتواند وظیفه خود را
+بدرستی انجام دهد، نیاز به حرکت در محیط دارد. الزام حرکت در محیط موجب پرسیدن این سوال می‌شود که، ربات برای انجام وظیفه خود چه مسیری را طی کند که علاوه بر ایمن بودن آن، با کمترین هزینه به هدف خود برسد. با توجه به محدودیت انرژی، تسریع در انجام کارها و عدم
+برخورد ربات با موانع موجود در محیط، اهمیت این سوال بهتر درک می‌شود. پاسخگویی به این پرسش، که پرسش اساسی در زمینه تحقیقاتی مهمی تحت عنوان برنامه‌ریزی مسیر است، از دیدگاه‌های مختلف صورت گرفته است.
 
+رویکردهای حل برنامه مسئله ریزی مسیر را می‌توان به چند دسته کلی تقسیم کرد:
+\begin{enumerate}
+	\item
+	بلادرنگ: اگر ربات از وقایع محیطی، مکان و حرکت موانع، از قبل اطلاع نداشته باشد، آنگاه به یافتن مسیری ایمن به سوی هدف مبادرت کند، در این حالت برنامه‌ریزی بلادرنگ نامیده می‌شود.
+	\cite{}
+	\item
+	کامل و کامل احتمالاتی: ارائه یک مسیر، در صورت وجود، کامل بودن
+	الگوریتم نامیده می‌شود. کامل بودن احتمالاتی نیز به این معنی است که اگر الگوریتم تا زمان طولانی اجرا شود، در صورت وجود یک مسیر، آن را خواهد یافت.
+	\cite{}
+	
+\end{enumerate}
 
-
+از جمله روش‌های مطرح برای حل برنامه مساله‌ریزی مسیر،
+الگوریتم‌های مبتنی برنمونه‌گیری هستند. در این روش‌ها با نمونه‌برداری از فضای پیکربندی، به ساخت درختی از نقطه شروع، مبادرت می شود. با رسیدن یکی از شاخه‌های درخت به نقطه هدف الگوریتم خاتمه می یابد.
+ این روش در ابتدا توسط
+\lr{Lavalle}
+در سال 1991 تحت عنوان درخت جستجوی سریع تصادفی
+\lr{RRT}
+مطرح گردید.
 % \section{برنامه ریزی مسیر}
 % \subsection{تاریخچه برنامه ریزی مسیر}
 
@@ -255,7 +193,7 @@
 \section{ساختار پایان نامه}
 
 پس از اتمام پایان نامه روند هر بخش را مختصرا توضیح خواهم داد.
-
+\newpage
 \section{جمع بندی}
 
 با توجه به طراحی اولیه برای ربات و بررسی قابلیت‌های قابل ارتقا، تمرکز اصلی بر روی بهبود مداوم و حداکثری ربات (از لحاظ نکات طراحی و ساخت و همچنین بخش نرم‌افزاری آن)در طی مراحل مختلف قرار گرفت. در نهایت با ساخت نمونه اولیه و اسمبل
