--- a/Thesis/chapter2.tex
+++ b/Thesis/chapter2.tex
@@ -28,6 +28,72 @@
 هدف اصلی پردازش تصویر بهینه‌سازی و تحسین کیفیت تصاویر است. این می‌تواند شامل کاهش نویز، تعدیل رنگ و کنتراست، تشخیص الگوها، تشخیص ویژگی‌ها و استخراج اطلاعات از تصاویر باشد. در زمینه‌های مختلف از پردازش تصویر استفاده می‌شود که از جمله آنها می‌توان به پزشکی (تشخیص بیماری‌ها از تصاویر پرتونگاری)، رباتیک (شناسایی محیط توسط ربات‌ها)، و امنیت (تشخیص چهره‌ها و اجسام در تصاویر نظارتی) اشاره کرد.
 
 پردازش تصویر شامل مراحل مختلفی مانند پیش‌پردازش، تبدیلات، تشخیص الگوها، و استخراج ویژگی‌ها است. الگوریتم‌های پردازش تصویر معمولاً بر اساس مفاهیم ریاضی، آمار و هوش مصنوعی طراحی می‌شوند. از این رو می‌توان گفت پردازش تصویر در حوزه‌های مختلف از مهندسی، علوم رایانه، و علوم پایه کاربردهای متعددی داشته و از اهمیت بالایی در تحلیل و انتقال اطلاعات تصویری برخوردار است.
+\newpage
+\section{تشخیص موانع}
+\subsection{مقدمه}
+در حوزه رباتیک و بخصوص در توسعه‌ی ربات‌های چهار پا، تشخیص موانع یکی از مسائل بنیادین و حیاتی است که ابزارهای پیشرفته تصویربرداری و پردازش تصویر را به کار می‌گیرد. در این بخش از تزیین، به تشخیص موانع با تمرکز بر روش‌های تشخیص رنگ و تشخیص لبه پرداخته خواهد شد. هدف اصلی این بخش، توضیح نحوه‌ی استفاده از این روش‌ها به منظور تشخیص و تجزیه و تحلیل موانع می‌باشد. این تکنیک‌ها به ربات‌ها اجازه می‌دهند تا محیط خود را بشناسند و در مسیر حرکت خود موانع را شناسایی و از آن‌ها دور بشوند یا با آن‌ها تعامل کنند. بررسی این روش‌ها نقطه عطفی مهم در توسعه‌ی ربات‌های پویا و هوش مصنوعی موجود می‌باشد.
+
+در ادامه، به بررسی مفاهیم تشخیص رنگ و تشخیص لبه خواهیم پرداخت تا درک عمیق‌تری از این مفاهیم و نحوه‌ی اجرای آن‌ها در مسائل تشخیص موانع داشته باشیم.
+
+\subsection{تشخیص رنگ}
+در فرآیند تشخیص موانع، یکی از روش‌های مورد استفاده، تشخیص رنگ موانع است.استفاده از تشخیص رنگ به عنوان یک ابزار قدرتمند در مسائل تشخیص موانع، به ربات‌ها امکان می‌دهد محیط خود را با دقت بالا کنترل کنند و به تصمیم‌گیری‌های بهتری دست یابند. برای انجام این کار، ابتدا باید محدوده‌ی رنگی موانع را مشخص کرد. به منظور این کار، از یک قطعه برنامه پایتون با استفاده از کتابخانه
+\lr{OpenCV}
+استفاده می‌شود. همانطور که در شکل
+\ref{ColorCalibration}
+مشاهده می‌شود این قطعه برنامه به شما اجازه می‌دهد تا با تصاویری از محیط خود، محدوده‌های رنگی (مثل محدوده رنگ قرمز،آبی، زرد و...) که موانع دارای آن رنگ هستند را تعیین کنید.
+
+بدین منظور چند نوار برای هر یک از سه پارامتر در روش
+\lr{HSV}
+طراحی شده است که با تنظیم بازه‌های بالا و پایین برای آنها می‌توانید رنگ مورد نظر خود را ار محیط ایزوله و آن را تشخیص دهید.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.8\textwidth]{./images/Chapter2/FindColorBoundry}	
+	\caption[]{}
+	\label{ColorCalibration}
+\end{figure}
+\noindent
+\unskip
+
+همچنین با استفاده از روشی تحت عنوان
+\lr{Morphological Transformations}
+که از مفهوم کرنل بهره می‌گیرد، نویز‌های موجود در تصویر را از بین برد.
+تصویر
+\ref{ColorCalibrationMorph}
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.8\textwidth]{./images/Chapter2/FindColorBoundryMorphologyOn}	
+	\caption[]{}
+	\label{ColorCalibrationMorph}
+\end{figure}
+\noindent
+\unskip
+
+
+حاصل استفاده از این روش بر روی تصویر
+\ref{ColorCalibration}
+می‌باشد. برای این ویژگی نیز یک نوار در انتها قرار داده شده که با دستور روشن و خاموش می‌توان آن را فعال و غیرفعال کرد.
+سپس از این محدوده‌های رنگی به عنوان پارامترهای ورودی در برنامه اصلی استفاده خواهد شد که جزئیات آن در قسمت‌های آتی بیان می‌گردد.
+در نتیجه اطلاعات تشخیص موانع از این مرحله استخراج شده و ربات می‌تواند بر اساس آن‌ها تصمیمات خود را در مورد حرکت و انجام وظایف مختلف بگیرد.
+
+
+\subsection{تشخیص لبه‌ها}
+
+در مرحله‌ی تشخیص لبه‌ها، از تکنیک‌های پردازش تصویر برای تعیین مرزها و لبه‌های اشیاء موانع استفاده می‌شود. این مرحله به وسیله‌ی کانتورها آغاز می‌شود که در مرحله‌ی قبلی به دست آمده‌اند. با استفاده از کانتورها، می‌توان مرزهای شیء را تشخیص داد و اطلاعاتی مانند عرض و ارتفاع شیء (موانع) را به دست آورد. این اطلاعات می‌توانند برای موارد مختلف مورد استفاده قرار گیرند.
+به عنوان مثال می‌توانند یک معیار برای تعیین فاصله از شیء مورد نظر استفاده شوند.
+در نهایت با استفاده از بازه‌های تعیین شده برای رنگ‌ موانع و لبه‌ها قادر به تشخیص موانعی از آن دست در محیط باشیم.
+
+نتیجه تشخیص موانع در فصل آخر بررسی شده است. شکل
+\ref{PinkDetected}
+نمونه‌ای از تشخیص مانعی به رنگ صورتی است. 
+
+% \subsubsection{تشخیص کانتور‌ها به کمک تشخیص}
+\subsection{شبه‌کد و تشریح جزئیات آن}
+در زیر شبه‌کد این بخش مختصرا قراره داده شده و پس از آن به تشریح کامل‌تر آن پرداخته خواهد شد.
+\section*{}
+\begin{latin}
+	\lstinputlisting[style=python_style]{code/Pseudocodes/ColorDetectionPseudocode.py}
+\end{latin}
 
 \section{الگوریتم درخت جستجوی تصادفی}
 \subsection{مقدمه}
@@ -90,18 +156,7 @@
 
 
 \subsection{شبیه‌سازی دوبعدی با پایتون}
-\subsubsection{نتایج شبیه‌سازی}
-در ابتدا نتایج حاصل از شبیه‌سازی توسط پایتون قرار داده‌ شده‌است. همانطور که در شکل
-\ref{نتیجه شبیه‌سازی RRT}
-قابل مشاهده است، یک محیط با ابعاد مشخص و تعداد موانع مشخص طراحی و سپس با تعیین نقطه شروع و پایان برای ربات، با استفاده از الگوریتم پیشنهادی ربات توانسته است مسیر خود را بدون برخورد با موانع بیابد.
-\begin{figure}[H]
-	\centering
-	\includegraphics[width=0.7\textwidth]{./images/Chapter2/ConvexResult}	
-	\caption[شبیه سازی الگوریتم \lr{RRT}]{شبیه سازی الگوریتم \lr{RRT}}
-	\label{نتیجه شبیه‌سازی RRT}
-\end{figure}
-\noindent
-\unskip
+
 
 \subsubsection{شبیه‌کد و تشریح جزئیات برنامه}
 در زیر شبه‌کد این بخش مختصرا قراره داده شده و پس از آن به تشریح کامل‌تر آن پرداخته خواهد شد.
@@ -138,9 +193,12 @@
 را در نظر گرفت. همچنین قابل ذکر است که برای هر یک از مراحل بالا یک یا دو متد
 \noindent\unskip\LTRfootnote{Method}
 در ماژول نوشته شده در نظر گرفته شده است و این متد‌ها با یکدیگر در ارتباط بوده و یا به صورت تو در تو
- \noindent\unskip\LTRfootnote{Nested}
+\noindent\unskip\LTRfootnote{Nested}
 در یکدیگر استفاده شده‌اند. 
 
+نتایج حاصل از این شبیه‌سازی در شکل
+\ref{نتیجه شبیه‌سازی RRT}
+قابل مشاهده می‌باشد.
 \subsubsection{ادغام الگوریتم با قابلیت‌های ربات به منظور پیاده‌سازی}
 همانطور که مشخص است استفاده از الگوریتم پیشنهادی به تنهایی مفید واقع نخواهد شد و بایستی از قابلیت های موجود در ربات برای بهینه‌سازی این روش استفاده شود. از قابلیت های ربات که می‌تواند به کار آید، دوربین استفاده شده می‌باشد. با استفاده از دوربین موجود موانع و فاصله‌ی ربات تا موانع تشخیص داده شده و سپس با توجه به این اطلاعات ربات تصمیم می‌گیرد تا نقاط تصادفی خود را در کدام جهت تولید کند و یا در کدام جهت به تولید ادامه مسیر نپردازد. بدین منظور در بخش های آتی به تشریح موارد ذکر شده پرداخته خواهد شد.
 
@@ -195,6 +253,6 @@
 \end{latin}
 
 
-
+\subsubsection{نتایج مکان‌یابی}
 \section{جمع بندی}
 در این فصل با تشریح مفاهیمی از تصویر و پردازش آن و کاربرد‌های آن در زمینه‌های مختلف همچون رباتیک آغاز و با بررسی الگوریتم درخت جستجوی تصادفی و شبیه‌سازی آن در محیط پایتون ادامه یافت. همچنین در انتها به بررسی مفهومی بسیار مهم به نام مکان‌یابی که برای پیاده‌سازی عملی الگوریتم بر روی ربات در محیط آزمایشگاهی ضروری است اشاره و از راهکاری نوین که در سال‌های اخیر مورد توجه قرار گرفته است، استفاده شد.
