--- a/Thesis/chapter3.tex
+++ b/Thesis/chapter3.tex
@@ -301,4 +301,4 @@
 
 \section{جمع‌بندی}
 
-
+در این فصل با توجه به اهمیت انتقال و مدیریت داده بین خود و ربات به طراحی یک سرور و نحوه ارتباط بخش‌های مختلف الکتریکی با یکدیگر پرداخته شد. بدین منظور از روشی با نام کوئری استرینگ استفاده شد. در این روش داده مورد نظر را در دو بخش (نام پارامتر، مقدار پارامتر) منتقل کرده و در سمت دیگر توسط همین دو معیار قابل شناسایی می‌باشند. همچنین برای پاسخ مناسب به درخواست‌های ارسال شونده به سمت سرور توسط توابعی که بطور معمول آن‌ها را هندلر می‌نامنند، چند حالت مختلف درخواست و پاسخ طراحی گردید.
