--- a/Thesis/chapter4.tex
+++ b/Thesis/chapter4.tex
@@ -1,4 +1,3 @@
-
 \chapter{سخت افزار الکترونیکی ربات}
 
 \section{مقدمه}
@@ -32,21 +31,21 @@
 	\item
 	ولتاژ کاری: 7.2 تا 6.3 ولت
 	\item
-	 فرکانس: ماکزیمم 72 مگاهرتز
+	فرکانس: ماکزیمم 72 مگاهرتز
 	\item
-	 تعداد پین‌های ورودی/خروجی: 37
+	تعداد پین‌های ورودی/خروجی: 37
 	\item
-	 تعداد پین‌های
-	 \lr{PWM}
-	 : 12
-	 
+	تعداد پین‌های
+	\lr{PWM}
+	: 12
+	
 	\item
-	 تایمر: 3+1
+	تایمر: 3+1
 	\item
-	 پروتکل های ارتباطی:
-	 \lr{I2C},
-	 \lr{SPI},
-	 \lr{UART,USART}
+	پروتکل های ارتباطی:
+	\lr{I2C},
+	\lr{SPI},
+	\lr{UART,USART}
 \end{itemize}
 \section{ماژول \lr{ESP32-CAM}}
 
@@ -156,8 +155,7 @@
 
 \section{تجهیزات مکانیکی}
 
-\subsection{سایر قطعات متصل کننده}
-\subsubsection{پین‌هدر}
+\subsection{پین‌هدر}
 پین‌هدر ها به دو دسته نر و ماده تقسیم می‌شوند که در شکل های
 \ref{پین‌هدر نر}
 و
@@ -169,16 +167,18 @@
 	\caption[پین‌هدر نر]{پین‌هدر نر \cite{PinHeaderMale}}
 	\label{پین‌هدر نر}
 \end{figure}
- از پین‌هدر های ماده به صورت دو خط موازی و بر روی برد هزار سوراخ استفاده شده است تا برد
- \lr{STM32}
- با پایه های خود بر روی آن قرار گیرد.
+از پین‌هدر های ماده به صورت دو خط موازی و بر روی برد هزار سوراخ استفاده شده است تا برد
+\lr{STM32}
+با پایه های خود بر روی آن قرار گیرد.
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=0.4\textwidth]{./images/Chapter4/PinHeaderFemale}
 	\caption[پین‌هدر ماده]{پین‌هدر ماده\cite{PinHeaderFemale}}
 	\label{پین‌هدر ماده}
 \end{figure}
+
+\subsection{سایر قطعات متصل کننده}
+
 \section{جمع بندی}
 همانطور که در بخش های این فصل بررسی شد، تمامی سخت‌افزار های استفاده شده در پروژه اعم از الکترونیکی و یا مکانیکی و یا سایر تجهیزات همگی با در نظر گرفتن کاربری تا حدامکان بصورت اقتصادی انتخاب شده و همچنین قابل دسترس در بازار ایران می‌باشند.
 از سوی دیگر داشتن شناخت کافی از جزئیات و اطلاعات فنی هریک از سخت‌افزار‌ها منجر به انتخاب  قطعات معرفی شده در کمترین زمان ممکن انجامید.
-
