--- a/Thesis/fa_title.tex
+++ b/Thesis/fa_title.tex
@@ -17,20 +17,19 @@
 %\firstadvisor{نام کامل استاد مشاور}
 %\secondadvisor{استاد مشاور دوم}
 % نام نویسنده را وارد کنید
-\name{سجاد }
+\name{سجاد}
 % نام خانوادگی نویسنده را وارد کنید
 \surname{قدیری}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\thesisdate{شهریور 1402}
+\thesisdate{مهر 1402}
 
 % چکیده پایان‌نامه را وارد کنید
 \fa-abstract{
-	در این پایان‌نامه، به بررسی و طراحی یک ربات عنکبوتی چهار پا با استفاده از دوربین به عنوان سامانه‌ای برای تشخیص موانع با رنگ‌های مختلف و برنامه‌ریزی مسیر در محیط‌های پویا و متغیر می‌پردازیم. این سامانه از یک الگوریتم مبتنی بر داده استفاده می‌کند تا با تجزیه و تحلیل تصاویر از دوربین، به تشخیص موانع در مسیر خود بپردازد و برنامه‌ریزی مناسبی را برای جلوگیری از تصادفات و تصادمات انجام دهد.
+	
+
 }
-
-
 % کلمات کلیدی پایان‌نامه را وارد کنید
-\keywords{کلیدواژه اول، ...، کلیدواژه پنجم (نوشتن سه تا پنج واژه کلیدی ضروری است)}
+\keywords{ربات عنکبوتی چهارپا ، دوربین، تشخیص موانع، مسیریابی، مکان‌یابی}
 
 
 
