--- a/Thesis/Chant.tex
+++ b/Thesis/Chant.tex
@@ -1,9 +1,11 @@
 \begin{acknowledgementpage}
-
-\vspace{1.5cm}
-
-{\nastaliq
-{
- نويسنده پايان‌نامه، درصورت تمايل ميتواند برای سپاسگزاری پايان‌نامه خود را به شخص يا اشخاص و يا ارگان خاصی تقدیم نماید.
+	
+	\vspace{1.5cm}
+	
+	{\nastaliq
+		{
+			تقدیم به پدر و مادر مهربانم که با صبر و دلسوزی در این راه همواره پشتیبان من بودند.
+			
+			
 }}\end{acknowledgementpage}
 \newpage
