--- a/Thesis/acknowledgement.tex
+++ b/Thesis/acknowledgement.tex
@@ -2,33 +2,19 @@
 \newpage\thispagestyle{empty}
 % سپاس‌گزاری
 {\nastaliq
-سپاس‌گزاری
+	سپاس‌گزاری
 }
 \\[2cm]
+اكنون كه به ياري پروردگار و راهنمايي اساتيد بزرگ موفق به اتمام این بخش از مسیر علمی خود شده ام وظيفه خود دانسته كه نهايت سپاسگزاري را از تمامي عزيزاني كه در اين راه به من كمك كرده اند را به عمل آورم:
 
- نويسنده پايان‌نامه می‌تواند مراتب امتنان خود را نسبت به استاد راهنما و استاد مشاور و یا ديگر افرادي كه طي انجام پايان‌نامه به نحوي او را یاری و یا با او همكاری نموده‌اند ابراز دارد.
-
-
-
-
-
-
-
-
-
-
-
-
+در آغاز از استاد بزرگوارم جناب دكتر محمد اعظم خسروي كه راهنمايي اين پايان نامه را به عهده داشته اند كمال تشكر را دارم.\\ 
+از جناب دکتر مسعود شفیعی که زحمت داوري و تصحيح اين پايان نامه را به عهده داشتند كمال سپاس را دارم.\\
+از همگروهی عزیز مهندس محمد برابادی که همواره یار و یاوری صبور بود کمال تشکر را دارم.\\
+در آخر نیز خالصانه از تمامي عزیزان اعم از هم دانشگاهيان، همراهان عزيز و دوستان خوبم كه در مقاطع مختلف تحصيلي به هر نحوی بنده را یاری کرده نهايت سپاس را دارم.
 
 
 % با استفاده از دستور زیر، امضای شما، به طور خودکار، درج می‌شود.
 \signature
-
-
-
-
-
-
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -37,14 +23,17 @@
 
 \pagestyle{style2}
 
-\vspace*{-1cm}
+%\vspace*{-1cm}
 \section*{\centering چکیده}
 %\addcontentsline{toc}{chapter}{چکیده}
-\vspace*{.5cm}
+% \vspace*{.5cm}
 \ffa-abstract
+
+ربات‌ها از جدیدترین دستاورد‌های انسان و تلفیقی از فناوری در حوزه‌‌های مختلفی همچون کنترل، هوش مصنوعی و اتوماسیون و... می‌باشند. امروزه هوشمندسازی فناوری های پیشین مورد توجه بوده و ربات‌ها نیز از آن مستثنی نیستند. از میان انواع ربات‌ها آن دسته‌ای که در ساخت آنها از طبیعت الهام گرفته شده است دارای چالش‌های نوینی بوده اند. ربات‌های عنکبوتی چهارپا نمونه‌ای از این دسته هستند. این پژوهش به تلاش هایی که در جهت بهبود عملکرد و مسیریابی ربات عنکبوتی چهارپا انجام شده می‌پردازد. در ابتدا یک ماژول چندجانبه که شامل دوربین می‌باشد به ربات اضافه شده و سپس با استفاده از زبان سی‌ پلاس پلاس به طراحی یک سرور محلی با هدف تبادل اطلاعات بصورت بیسیم بین ربات و آن پرداخته می‌شود. همچنین از این ویژگی برای نظارت و ارزیابی صحت اطلاعات و همچنین تصمیم‌گیری‌های ربات در محیط استفاده خواهد شد. در ادامه تشخیص موانع موجود در محیط به کمک تشخیص رنگ و روش‌های پردازش تصویر با استفاده از زبان پایتون ارائه می‌گردد.
+سپس به کمک کتابخانه‌ای که اساس کار آن بهره‌گیری از تگ‌های حاوی اطلاعات می‌باشد، به مکان‌یابی ربات پرداخته می‌شود. سپس شبیه‌‌سازی الگوریتم مسیر‌یابی انجام شده و تغییرات مورد نیاز در جهت تلفیق این الگوریتم با ویژگی‌های ربات برای پیاده‌سازی عملی مطرح می‌گردد.
+سپس آزمایش‌های عملی ربات صورت گرفته و نتایج آن بررسی می‌شود.
+
 \vspace*{2cm}
-
-
 {\noindent\large\textbf{واژه‌های کلیدی:}}\par
 \vspace*{.5cm}
 \fkeywords
