--- a/Thesis/appendix1.tex
+++ b/Thesis/appendix1.tex
@@ -1,13 +1,13 @@
 \chapter*{‌پیوست}
 \markboth{پیوست}{}
 \addcontentsline{toc}{chapter}{پیوست}
-موضوعات مرتبط با متن گزارش پایان نامه كه در يكی از گروه‌های زير قرار می‌گيرد، در بخش پيوست‌ها آورده شوند:
-\begin{enumerate}
-\item  اثبات های رياضی يا عمليات رياضی طولانی‌.‌
-\item داده و اطلاعات نمونه (های) مورد مطالعه (\lr{Case Study}) چنانچه طولانی باشد‌.‌
-\item نتايج كارهای ديگران چنانچه نياز به تفصيل باشد‌.‌
-\item مجموعه تعاريف متغيرها و پارامترها، چنانچه طولانی بوده و در متن به انجام نرسيده باشد‌.‌
-\end{enumerate}
+%موضوعات مرتبط با متن گزارش پایان نامه كه در يكی از گروه‌های زير قرار می‌گيرد، در بخش پيوست‌ها آورده شوند:
+%\begin{enumerate}
+	%\item  اثبات های رياضی يا عمليات رياضی طولانی‌.‌
+	%\item داده و اطلاعات نمونه (های) مورد مطالعه (\lr{Case Study}) چنانچه طولانی باشد‌.‌
+	%\item نتايج كارهای ديگران چنانچه نياز به تفصيل باشد‌.‌
+	%\item مجموعه تعاريف متغيرها و پارامترها، چنانچه طولانی بوده و در متن به انجام نرسيده باشد‌.‌
+%\end{enumerate}
 % براي شماره‌گذاري روابط، جداول و اشكال موجود در پيوست‌ از ساختار متفاوتي نسبت به متن اصلي استفاده مي‌شود كه در زير به‌عنوان نمونه نمايش داده شده‌است. 
 % \begin{equation}
 %F=ma
