--- a/Thesis/en_title.tex
+++ b/Thesis/en_title.tex
@@ -1,27 +1,27 @@
-% در این فایل، عنوان پایان‌نامه، مشخصات خود و چکیده پایان‌نامه را به انگلیسی، وارد کنید.
+% در این فایل، عنوان پایان‌نامه، مشخصات خود و چکیده پایان‌نامه را به انگلیسی، وارد % در این فایل، عنوان پایان‌نامه، مشخصات خود و چکیده پایان‌نامه را به انگلیسی، وارد کنید.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \baselineskip=.6cm
 \begin{latin}
-
-\latinfaculty{Department of Electrical Engineering}
-
-
-\latintitle{Implementation of path planning algorithm for spider robot and improve its performance}
-
-
-\firstlatinsupervisor{Dr. M.A.Khosravi }
-
-%\secondlatinsupervisor{Second Supervisor}
-
-\firstlatinadvisor{Dr. M.Shafie}
-
-%\secondlatinadvisor{Second Advisor}
-
-\latinname{Sajad}
-
-\latinsurname{Ghadiri}
-
-\latinthesisdate{Sep \& 2023}
-
-\latinvtitle
+	
+	\latinfaculty{Department of Electrical Engineering}
+	
+	
+	\latintitle{Implementation of path planning algorithm for spider robot and improve its performance}
+	
+	
+	\firstlatinsupervisor{Dr. M.A.Khosravi }
+	
+	%\secondlatinsupervisor{Second Supervisor}
+	
+	\firstlatinadvisor{Dr. M.Shafie}
+	
+	%\secondlatinadvisor{Second Advisor}
+	
+	\latinname{Sajad}
+	
+	\latinsurname{Ghadiri}
+	
+	\latinthesisdate{Sep \& 2023}
+	
+	\latinvtitle
 \end{latin}
